--- a/mt_all_saxes_brass_ok_svm_mfcc.ipynb
+++ b/mt_all_saxes_brass_ok_svm_mfcc.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# All Saxophones: SVM\n",
+    "# All Saxophones, Brass OK: SVM\n",
     "\n",
     "* model = SVM\n",
-    "* target = TENOR and ALTO and SOPRANO and BARITONE (ie. ALL SAXES)\n",
+    "* features = MFCC\n",
+    "* target = ALL SAXES\n",
     "\n",
-    "Use SVM model to classify whether or not a saxophone is playing in a sample."
+    "Use SVM model to classify whether or not a saxophone is playing in a sample, samples including brass instruments are left in the dataset."
    ]
   },
   {
@@ -18,18 +19,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.decomposition import PCA \n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.metrics import AUC, Recall\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, \\\n",
+    "    GridSearchCV\n",
     "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import precision_recall_curve, \\\n",
+    "    roc_curve, roc_auc_score, confusion_matrix, \\\n",
+    "    classification_report\n",
     "from scipy.stats import uniform\n",
     "\n",
-    "from pickles_to_pandas import pickles_to_pandas"
+    "from _common import NUM_LABEL_COLS, RANDOM_SEED\n",
+    "from _all_saxes_brass_ok_mfcc import TEST_SIZE, VALIDATION_SIZE, \\\n",
+    "    BANDS, TIME_SLICES, data, target"
    ]
   },
   {
@@ -38,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pickles_to_pandas('./data/5s/labeled/features_r02')"
+    "NUM_COMPONENTS = 24"
    ]
   },
   {
@@ -47,8 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_LABEL_COLS = 13\n",
-    "NUM_COMPONENTS = 30"
+    "pca = PCA(n_components=NUM_COMPONENTS)    # optimal n_components value determined in mt_cc_all_saxes_brass_ok_pca_lmsc"
    ]
   },
   {
@@ -59,83 +64,10 @@
     {
      "data": {
       "text/plain": [
-       "(5411, 10790)"
+       "PCA(n_components=24)"
       ]
      },
      "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_filtered = df[df['excl'] == '0']  # exclude records we want to exclude\n",
-    "df_filtered.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4365, 10775)\n",
-      "(4365,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# exclude records we want to exclude\n",
-    "df_filtered = df_filtered[df_filtered['clrt'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['othr'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['trmp'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['trmb'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['otrb'] == '0']\n",
-    "\n",
-    "num_x_cols = df_filtered.shape[1] - NUM_LABEL_COLS - 1  \n",
-    "# ^ last bit to adjust for zero indexing\n",
-    "data = df_filtered.iloc[:, 1:num_x_cols].to_numpy() \n",
-    "# ^ These are the features\n",
-    "scaler = StandardScaler()\n",
-    "scaler.fit(data)\n",
-    "data = scaler.transform(data)\n",
-    "\n",
-    "# Create target column\n",
-    "combined = df_filtered[['tenr']].to_numpy() + df_filtered[['alto']].to_numpy() + df_filtered[['tora']].to_numpy() + \\\n",
-    "            df_filtered[['sop']].to_numpy() + df_filtered[['bari']].to_numpy()\n",
-    "combined = combined.astype('int')\n",
-    "combined[combined > 0] = 1\n",
-    "df_filtered['saxophones'] = combined\n",
-    "\n",
-    "target = df_filtered[['saxophones']].to_numpy().ravel()  # << This is the label\n",
-    "\n",
-    "print(data.shape)\n",
-    "print(target.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA(n_components=NUM_COMPONENTS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PCA(n_components=30)"
-      ]
-     },
-     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,12 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train, x_test, y_train, y_test = \\\n",
-    "     train_test_split(d, target, test_size=0.20, random_state=0)"
+    "     train_test_split(d, target,\n",
+    "                      test_size=TEST_SIZE,\n",
+    "                      random_state=RANDOM_SEED)"
    ]
   },
   {
@@ -199,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8694158075601375\n"
+      "0.8088813940415964\n"
      ]
     }
    ],
@@ -219,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -250,13 +184,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>316</td>\n",
-       "      <td>56</td>\n",
+       "      <td>553</td>\n",
+       "      <td>203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>58</td>\n",
-       "      <td>443</td>\n",
+       "      <td>137</td>\n",
+       "      <td>886</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -264,11 +198,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  316   56\n",
-       "1   58  443"
+       "0  553  203\n",
+       "1  137  886"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,12 +224,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.85      0.85       372\n",
-      "           1       0.89      0.88      0.89       501\n",
+      "           0       0.80      0.73      0.76       756\n",
+      "           1       0.81      0.87      0.84      1023\n",
       "\n",
-      "    accuracy                           0.87       873\n",
-      "   macro avg       0.87      0.87      0.87       873\n",
-      "weighted avg       0.87      0.87      0.87       873\n",
+      "    accuracy                           0.81      1779\n",
+      "   macro avg       0.81      0.80      0.80      1779\n",
+      "weighted avg       0.81      0.81      0.81      1779\n",
       "\n"
      ]
     }
@@ -313,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,11 +255,6 @@
     "    'C': uniform(0.1, 3.0)\n",
     "}\n",
     "\n",
-    "# RandomizedSearchCV(estimator, param_distributions, *, n_iter=10, \n",
-    "#                    scoring=None, n_jobs=None, iid='deprecated', \n",
-    "#                    refit=True, cv=None, verbose=0, \n",
-    "#                    pre_dispatch='2*n_jobs', random_state=None, \n",
-    "#                    error_score=nan, return_train_score=False)\n",
     "svm_model = SVC()\n",
     "clf = RandomizedSearchCV(svm_model, model_params, n_iter=10, \n",
     "                         cv=5)\n",
@@ -335,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8762886597938144\n"
+      "0.8251826869027543\n"
      ]
     }
    ],
@@ -355,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -386,13 +315,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>323</td>\n",
-       "      <td>49</td>\n",
+       "      <td>585</td>\n",
+       "      <td>171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>59</td>\n",
-       "      <td>442</td>\n",
+       "      <td>140</td>\n",
+       "      <td>883</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -400,11 +329,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  323   49\n",
-       "1   59  442"
+       "0  585  171\n",
+       "1  140  883"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -426,12 +355,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.87      0.86       372\n",
-      "           1       0.90      0.88      0.89       501\n",
+      "           0       0.81      0.77      0.79       756\n",
+      "           1       0.84      0.86      0.85      1023\n",
       "\n",
-      "    accuracy                           0.88       873\n",
-      "   macro avg       0.87      0.88      0.87       873\n",
-      "weighted avg       0.88      0.88      0.88       873\n",
+      "    accuracy                           0.83      1779\n",
+      "   macro avg       0.82      0.82      0.82      1779\n",
+      "weighted avg       0.82      0.83      0.82      1779\n",
       "\n"
      ]
     }
@@ -451,30 +380,59 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 17}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# BaggingClassifier(base_estimator=None, n_estimators=10, *, \n",
-    "#                   max_samples=1.0, max_features=1.0, \n",
-    "#                   bootstrap=True, bootstrap_features=False, \n",
-    "#                   oob_score=False, warm_start=False, \n",
-    "#                   n_jobs=None, random_state=None, verbose=0) \n",
-    "clf = BaggingClassifier(base_estimator=SVC(C=params['C']),\n",
-    "                        n_estimators=400, \n",
-    "                        max_features=NUM_COMPONENTS - 4,\n",
-    "                        random_state=42)\n",
-    "model = clf.fit(x_train, y_train)"
+    "# param_grid = {'max_features': [NUM_COMPONENTS - 2, NUM_COMPONENTS - 3, \n",
+    "#                                NUM_COMPONENTS - 4, NUM_COMPONENTS - 5,\n",
+    "#                                NUM_COMPONENTS - 6, NUM_COMPONENTS - 7, \n",
+    "#                                NUM_COMPONENTS - 8, NUM_COMPONENTS - 9,\n",
+    "#                                NUM_COMPONENTS - 10, NUM_COMPONENTS - 11,\n",
+    "#                                NUM_COMPONENTS - 12, NUM_COMPONENTS - 13]}\n",
+    "\n",
+    "# base_estimator = SVC(C=params['C'])\n",
+    "# estimator = BaggingClassifier(base_estimator=base_estimator, n_estimators=100)\n",
+    "\n",
+    "# clf = GridSearchCV(estimator, param_grid, n_jobs=-1)\n",
+    "# search = clf.fit(x_train, y_train)\n",
+    "# search.best_params_\n",
+    "\n",
+    "# max_features = 17"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = BaggingClassifier(base_estimator=SVC(C=params['C']),\n",
+    "                        n_estimators=400, \n",
+    "                        max_features=17,\n",
+    "                        random_state=42)\n",
+    "model = clf.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8797250859106529\n"
+      "0.8240584598088814\n"
      ]
     }
    ],
@@ -485,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -516,13 +474,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>321</td>\n",
-       "      <td>51</td>\n",
+       "      <td>564</td>\n",
+       "      <td>192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>54</td>\n",
-       "      <td>447</td>\n",
+       "      <td>121</td>\n",
+       "      <td>902</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -530,11 +488,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  321   51\n",
-       "1   54  447"
+       "0  564  192\n",
+       "1  121  902"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -556,12 +514,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.86      0.86       372\n",
-      "           1       0.90      0.89      0.89       501\n",
+      "           0       0.82      0.75      0.78       756\n",
+      "           1       0.82      0.88      0.85      1023\n",
       "\n",
-      "    accuracy                           0.88       873\n",
-      "   macro avg       0.88      0.88      0.88       873\n",
-      "weighted avg       0.88      0.88      0.88       873\n",
+      "    accuracy                           0.82      1779\n",
+      "   macro avg       0.82      0.81      0.82      1779\n",
+      "weighted avg       0.82      0.82      0.82      1779\n",
       "\n"
      ]
     }
@@ -569,13 +527,6 @@
    "source": [
     "print(classification_report(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
